--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -15,14 +15,10 @@
   - service: media_player.media_pause
     data: {}
     entity_id:
-    - media_player.actually_speakers
-    - media_player.all_speakers
-    - media_player.bedroom_speaker
-    - media_player.bathroom_speaker
-    - media_player.bedroom_tv
-    - media_player.kitchen_speaker
-    - media_player.living_room_speaker
-    - media_player.living_room_tv
+    - media_player.living_room
+    - media_player.bedroom
+    - media_player.bathroom
+    - media_player.living_room_apple_tv
   mode: single
 - id: '1610995780479'
   alias: Arriving Home
@@ -131,7 +127,7 @@
     above: 75
   - condition: state
     entity_id: vacuum.robovac
-    state: 'off'
+    state: docked
     for:
       hours: 4
       minutes: 0
@@ -161,7 +157,6 @@
       conditions:
       - condition: state
         entity_id: vacuum.robovac
-        attribute: status
         state: docked
         for:
           hours: 0
@@ -169,8 +164,7 @@
           seconds: 0
       - condition: state
         entity_id: vacuum.robovac
-        attribute: status
-        state: charging
+        state: Charging
   action:
   - service: vacuum.return_to_base
     data: {}
@@ -195,7 +189,7 @@
     above: 75
   - condition: state
     entity_id: vacuum.robovac
-    state: 'off'
+    state: docked
     for:
       hours: 22
       minutes: 0
