--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -248,10 +248,10 @@ ios:
 
 # Eufy Robovac
 
-eufy_vacuum:
-  devices:
-  - name: Robovac
-    address: 192.168.0.122
-    access_token: 2lRDw1wuRbuvjfbMKgyrNQ
-    id: 500700082cf432328ee3
-    type: T2118 # T2130
+# eufy_vacuum:
+#  devices:
+#  - name: Robovac
+#    address: 192.168.0.122
+#    access_token: 2lRDw1wuRbuvjfbMKgyrNQ
+#    id: 500700082cf432328ee3
+#    type: T2118 # T2130
