--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -40,6 +40,7 @@ light:
       - light.living_color_lamp_3
       - light.string_lights
       - light.desk_lights
+      - light.bedroom
   - platform: group
     name: Black Lamp
     entities:
