--- a/config/scenes.yaml
+++ b/config/scenes.yaml
@@ -4,10 +4,9 @@
     light.string_lights:
       supported_color_modes:
       - onoff
-      color_mode: onoff
       friendly_name: String Lights
       supported_features: 0
-      state: 'on'
+      state: unavailable
     input_boolean.sync_what_s_playing_to_lights:
       editable: true
       icon: mdi:palette
@@ -18,13 +17,27 @@
       - onoff
       friendly_name: Desk Lights
       supported_features: 0
-      state: 'off'
+      state: unavailable
     light.black_lamp:
-      min_mireds: 153
-      max_mireds: 500
       supported_color_modes:
       - color_temp
       - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Black Lamp
+      supported_features: 44
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
+      entity_id:
+      - light.living_color_lamp_1
+      - light.living_color_lamp_2
+      - light.living_color_lamp_3
       color_mode: xy
       brightness: 54
       hs_color:
@@ -37,17 +50,38 @@
       xy_color:
       - 0.4498
       - 0.4059
-      entity_id:
-      - light.living_color_lamp_1
-      - light.living_color_lamp_2
-      - light.living_color_lamp_3
-      icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
-      supported_features: 40
+      effect: None
       state: 'on'
+    light.bedroom:
+      supported_color_modes:
+      - brightness
+      is_hue_group: true
+      hue_scenes:
+      - Tropical twilight
+      - Dimmed
+      - Energize
+      - Savanna sunset
+      - Mixology
+      - Read
+      - Concentrate
+      - Spring blossom
+      - Bright
+      - Arctic aurora
+      - Nightlight
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
+      icon: mdi:lightbulb-group
+      friendly_name: Bedroom
+      supported_features: 40
+      state: 'off'
   icon: mdi:filmstrip
   metadata:
     light.black_lamp:
+      entity_only: true
+    light.bedroom:
       entity_only: true
 - id: '1610994765804'
   name: Full On
@@ -145,36 +179,82 @@
       - onoff
       friendly_name: Desk Lights
       supported_features: 0
-      color_mode: onoff
-      state: 'on'
+      state: unavailable
     light.string_lights:
       supported_color_modes:
       - onoff
       friendly_name: String Lights
       supported_features: 0
-      state: 'off'
+      state: unavailable
     input_boolean.sync_what_s_playing_to_lights:
       editable: true
       icon: mdi:palette
       friendly_name: Sync What's Playing to Lights?
       state: 'off'
     light.black_lamp:
-      min_mireds: 153
-      max_mireds: 500
       supported_color_modes:
       - color_temp
       - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Black Lamp
+      supported_features: 44
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
       entity_id:
       - light.living_color_lamp_1
       - light.living_color_lamp_2
       - light.living_color_lamp_3
+      color_mode: xy
+      brightness: 253
+      hs_color:
+      - 38.438
+      - 50.196
+      rgb_color:
+      - 255
+      - 209
+      - 127
+      xy_color:
+      - 0.4498
+      - 0.4059
+      effect: None
+      state: 'on'
+    light.bedroom:
+      supported_color_modes:
+      - brightness
+      is_hue_group: true
+      hue_scenes:
+      - Tropical twilight
+      - Dimmed
+      - Energize
+      - Savanna sunset
+      - Mixology
+      - Read
+      - Concentrate
+      - Spring blossom
+      - Bright
+      - Arctic aurora
+      - Nightlight
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
       icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
+      friendly_name: Bedroom
       supported_features: 40
       state: 'off'
   icon: mdi:briefcase-outline
   metadata:
     light.black_lamp:
+      entity_only: true
+    light.bedroom:
       entity_only: true
 - id: '1619984401301'
   name: Party
@@ -237,29 +317,35 @@
       - onoff
       friendly_name: Desk Lights
       supported_features: 0
-      state: 'off'
+      state: unavailable
     light.string_lights:
       supported_color_modes:
       - onoff
       friendly_name: String Lights
       supported_features: 0
-      color_mode: onoff
-      state: 'on'
+      state: unavailable
     light.black_lamp:
-      min_mireds: 153
-      max_mireds: 500
       supported_color_modes:
       - color_temp
       - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Black Lamp
+      supported_features: 44
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
       entity_id:
       - light.living_color_lamp_1
       - light.living_color_lamp_2
       - light.living_color_lamp_3
-      icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
-      supported_features: 40
       color_mode: xy
-      brightness: 255
+      brightness: 128
       hs_color:
       - 38.438
       - 50.196
@@ -270,24 +356,110 @@
       xy_color:
       - 0.4498
       - 0.4059
+      effect: None
+      state: 'on'
+    light.bedroom:
+      supported_color_modes:
+      - brightness
+      is_hue_group: true
+      hue_scenes:
+      - Tropical twilight
+      - Dimmed
+      - Energize
+      - Savanna sunset
+      - Mixology
+      - Read
+      - Concentrate
+      - Spring blossom
+      - Bright
+      - Arctic aurora
+      - Nightlight
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
+      icon: mdi:lightbulb-group
+      friendly_name: Bedroom
+      supported_features: 40
+      color_mode: brightness
+      brightness: 128
       state: 'on'
   icon: mdi:spa
   metadata:
     light.black_lamp:
       entity_only: true
+    light.bedroom:
+      entity_only: true
 - id: '1664949050233'
   name: Now Dining
   entities:
-    light.desk_lights:
+    light.bedroom:
       supported_color_modes:
-      - onoff
-      friendly_name: Desk Lights
-      supported_features: 0
-      color_mode: onoff
+      - brightness
+      is_hue_group: true
+      hue_scenes:
+      - Tropical twilight
+      - Dimmed
+      - Energize
+      - Savanna sunset
+      - Mixology
+      - Read
+      - Concentrate
+      - Spring blossom
+      - Bright
+      - Arctic aurora
+      - Nightlight
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
+      icon: mdi:lightbulb-group
+      friendly_name: Bedroom
+      supported_features: 40
+      color_mode: brightness
+      brightness: 253
+      state: 'on'
+    light.black_lamp:
+      supported_color_modes:
+      - color_temp
+      - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Black Lamp
+      supported_features: 44
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
+      entity_id:
+      - light.living_color_lamp_1
+      - light.living_color_lamp_2
+      - light.living_color_lamp_3
+      color_mode: xy
+      brightness: 253
+      hs_color:
+      - 38.438
+      - 50.196
+      rgb_color:
+      - 255
+      - 209
+      - 127
+      xy_color:
+      - 0.4498
+      - 0.4059
+      effect: None
       state: 'on'
   icon: mdi:silverware-fork-knife
   metadata:
-    light.desk_lights:
+    light.bedroom:
+      entity_only: true
+    light.black_lamp:
       entity_only: true
 - id: '1664949090634'
   name: Bedroom on
@@ -321,31 +493,28 @@
   name: Living Room Off
   entities:
     light.living_room_lights:
-      supported_color_modes:
-      - color_temp
-      - onoff
-      - xy
-      icon: mdi:lightbulb-group
-      friendly_name: Living Room Lights
-      supported_features: 40
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
+      supported_color_modes:
+      - color_temp
+      - onoff
+      - xy
       entity_id:
       - light.living_color_lamp_1
       - light.living_color_lamp_2
       - light.living_color_lamp_3
       - light.string_lights
       - light.desk_lights
-      state: 'off'
-    media_player.sanjits_lg_tv:
-      source_list:
-      - Live TV
-      assumed_state: true
-      device_class: tv
-      friendly_name: Sanjit’s LG TV
-      supported_features: 24381
+      icon: mdi:lightbulb-group
+      friendly_name: Living Room Lights
+      supported_features: 44
       state: 'off'
   icon: mdi:lamps-outline
   metadata:
@@ -354,28 +523,33 @@
 - id: '1672166509043'
   name: Living Room On
   entities:
-    light.desk_lights:
+    light.living_room_lights:
       supported_color_modes:
+      - brightness
+      - color_temp
       - onoff
-      friendly_name: Desk Lights
-      supported_features: 0
-      color_mode: onoff
-      state: 'on'
-    light.black_lamp:
+      - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Living Room Lights
+      supported_features: 44
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
-      supported_color_modes:
-      - color_temp
-      - xy
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
       entity_id:
       - light.living_color_lamp_1
       - light.living_color_lamp_2
       - light.living_color_lamp_3
-      icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
-      supported_features: 40
+      - light.string_lights
+      - light.desk_lights
+      - light.bedroom
       color_mode: xy
-      brightness: 253
+      brightness: 255
       hs_color:
       - 38.438
       - 50.196
@@ -386,19 +560,9 @@
       xy_color:
       - 0.4498
       - 0.4059
-      state: 'on'
-    light.string_lights:
-      supported_color_modes:
-      - onoff
-      friendly_name: String Lights
-      supported_features: 0
-      color_mode: onoff
+      effect: None
       state: 'on'
   icon: mdi:lamps
   metadata:
-    light.desk_lights:
-      entity_only: true
-    light.black_lamp:
-      entity_only: true
-    light.string_lights:
+    light.living_room_lights:
       entity_only: true
