fast forward NYC

--- a/config/scenes.yaml
+++ b/config/scenes.yaml
@@ -4,9 +4,10 @@
     light.string_lights:
       supported_color_modes:
       - onoff
+      color_mode: onoff
       friendly_name: String Lights
       supported_features: 0
-      state: unavailable
+      state: 'on'
     input_boolean.sync_what_s_playing_to_lights:
       editable: true
       icon: mdi:palette
@@ -18,13 +19,34 @@
       friendly_name: Desk Lights
       supported_features: 0
       state: unavailable
-    light.black_lamp:
+    light.bedroom:
       supported_color_modes:
-      - color_temp
-      - xy
+      - brightness
+      color_mode: brightness
+      brightness: 13
+      is_hue_group: true
+      hue_scenes:
+      - Bright
+      - Tropical twilight
+      - Read
+      - Nightlight
+      - Energize
+      - Arctic aurora
+      - Dimmed
+      - Spring blossom
+      - Mixology
+      - Savanna sunset
+      - Concentrate
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
       icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
-      supported_features: 44
+      friendly_name: Bedroom
+      supported_features: 40
+      state: 'on'
+    light.living_color_lamp_1:
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
@@ -34,12 +56,29 @@
       - candle
       - fire
       - unknown
-      entity_id:
-      - light.living_color_lamp_1
-      - light.living_color_lamp_2
-      - light.living_color_lamp_3
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 1
+      supported_features: 44
+      state: 'off'
+    light.living_color_lamp_2:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
+      supported_color_modes:
+      - color_temp
+      - xy
       color_mode: xy
-      brightness: 54
+      brightness: 13
       hs_color:
       - 38.438
       - 50.196
@@ -51,37 +90,51 @@
       - 0.4498
       - 0.4059
       effect: None
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 2
+      supported_features: 44
       state: 'on'
-    light.bedroom:
+    light.living_color_lamp_3:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
       supported_color_modes:
-      - brightness
-      is_hue_group: true
-      hue_scenes:
-      - Tropical twilight
-      - Dimmed
-      - Energize
-      - Savanna sunset
-      - Mixology
-      - Read
-      - Concentrate
-      - Spring blossom
-      - Bright
-      - Arctic aurora
-      - Nightlight
-      - Relax
-      hue_type: room
-      lights:
-      - Bedroom white lamp 1
-      dynamics: false
-      icon: mdi:lightbulb-group
-      friendly_name: Bedroom
-      supported_features: 40
-      state: 'off'
+      - color_temp
+      - xy
+      color_mode: xy
+      brightness: 13
+      hs_color:
+      - 38.438
+      - 50.196
+      rgb_color:
+      - 255
+      - 209
+      - 127
+      xy_color:
+      - 0.4498
+      - 0.4059
+      effect: None
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 3
+      supported_features: 44
+      state: 'on'
   icon: mdi:filmstrip
   metadata:
-    light.black_lamp:
-      entity_only: true
     light.bedroom:
+      entity_only: true
+    light.living_color_lamp_1:
+      entity_only: true
+    light.living_color_lamp_2:
+      entity_only: true
+    light.living_color_lamp_3:
       entity_only: true
 - id: '1610994765804'
   name: Full On
@@ -321,16 +374,38 @@
     light.string_lights:
       supported_color_modes:
       - onoff
+      color_mode: onoff
       friendly_name: String Lights
       supported_features: 0
-      state: unavailable
-    light.black_lamp:
+      state: 'on'
+    light.bedroom:
       supported_color_modes:
-      - color_temp
-      - xy
+      - brightness
+      color_mode: brightness
+      brightness: 128
+      is_hue_group: true
+      hue_scenes:
+      - Bright
+      - Tropical twilight
+      - Read
+      - Nightlight
+      - Energize
+      - Arctic aurora
+      - Dimmed
+      - Spring blossom
+      - Mixology
+      - Savanna sunset
+      - Concentrate
+      - Relax
+      hue_type: room
+      lights:
+      - Bedroom white lamp 1
+      dynamics: false
       icon: mdi:lightbulb-group
-      friendly_name: Black Lamp
-      supported_features: 44
+      friendly_name: Bedroom
+      supported_features: 40
+      state: 'on'
+    light.living_color_lamp_1:
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
@@ -340,10 +415,27 @@
       - candle
       - fire
       - unknown
-      entity_id:
-      - light.living_color_lamp_1
-      - light.living_color_lamp_2
-      - light.living_color_lamp_3
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 1
+      supported_features: 44
+      state: 'off'
+    light.living_color_lamp_2:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
+      supported_color_modes:
+      - color_temp
+      - xy
       color_mode: xy
       brightness: 128
       hs_color:
@@ -357,39 +449,51 @@
       - 0.4498
       - 0.4059
       effect: None
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 2
+      supported_features: 44
       state: 'on'
-    light.bedroom:
+    light.living_color_lamp_3:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      - unknown
       supported_color_modes:
-      - brightness
-      is_hue_group: true
-      hue_scenes:
-      - Tropical twilight
-      - Dimmed
-      - Energize
-      - Savanna sunset
-      - Mixology
-      - Read
-      - Concentrate
-      - Spring blossom
-      - Bright
-      - Arctic aurora
-      - Nightlight
-      - Relax
-      hue_type: room
-      lights:
-      - Bedroom white lamp 1
-      dynamics: false
-      icon: mdi:lightbulb-group
-      friendly_name: Bedroom
-      supported_features: 40
-      color_mode: brightness
+      - color_temp
+      - xy
+      color_mode: xy
       brightness: 128
+      hs_color:
+      - 38.438
+      - 50.196
+      rgb_color:
+      - 255
+      - 209
+      - 127
+      xy_color:
+      - 0.4498
+      - 0.4059
+      effect: None
+      mode: normal
+      dynamics: none
+      friendly_name: Living color lamp 3
+      supported_features: 44
       state: 'on'
   icon: mdi:spa
   metadata:
-    light.black_lamp:
-      entity_only: true
     light.bedroom:
+      entity_only: true
+    light.living_color_lamp_1:
+      entity_only: true
+    light.living_color_lamp_2:
+      entity_only: true
+    light.living_color_lamp_3:
       entity_only: true
 - id: '1664949050233'
   name: Now Dining
