--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -486,3 +486,16 @@
         - media_player.living_room
         - media_player.bedroom
   mode: single
+- id: '1706139995064'
+  alias: Sonos IV - Turntable
+  description: ''
+  trigger: []
+  condition: []
+  action:
+  - service: media_player.play_media
+    data:
+      media_content_id: x-rincon-mp3radio://http://192.168.1.20:8000/stream.mp3
+      media_content_type: music
+    target:
+      entity_id: media_player.bedroom
+  mode: single
