--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -54,7 +54,7 @@ homeassistant:
 
 # camera:
 #   - platform: mjpeg
-#     mjpeg_url: http://10.0.0.161:8081/cam_pic_new.php
+#     mjpeg_url: http://192.168.1.30:8081/cam_pic_new.php
 #     username: "picam"
 #     password: "opensesame"
 #     name: "Window"
@@ -65,11 +65,11 @@ sensor:
 #     select: "span"
 #     name: "AC Noise"
 
-#   - platform: template
-#     sensors:
-#       ac_noise_bool:
-#         value_template: "{{ states('sensor.ac_noise') | float > states('input_number.noise_detection_threshold') | float }}" # use > 1.5 for summer/AC
-#         friendly_name: "AC Noise (Boolean)"
+   - platform: template
+     sensors:
+       ac_noise_bool:
+         value_template: "{{ states('sensor.ac_noise') | float > states('input_number.noise_detection_threshold') | float }}" # use > 1.5 for summer/AC
+         friendly_name: "AC Noise (Boolean)"
 #       living_room_tv_cc_volume:
 #         value_template: "{{ state_attr('media_player.living_room_tv', 'volume_level') | float }}"
 #         friendly_name: "Living Room TV Chromecast (Volume)"
@@ -110,22 +110,22 @@ sensor:
 
 ios:
   actions:
-    - name: bedroom_off
-      background_color: "#000000"
-      label:
-        text: "Bedroom Off"
-        color: "#ddbe00"
-      icon:
-        icon: bed
-        color: "#ddbe00"
-    - name: bedroom_on
-      background_color: "#ddbe00"
-      label:
-        text: "Bedroom On"
-        color: "#000000"
-      icon:
-        icon: bed-empty
-        color: "#000000"
+#    - name: bedroom_off
+#      background_color: "#000000"
+#      label:
+#        text: "Bedroom Off"
+#        color: "#ddbe00"
+#      icon:
+#        icon: bed
+#        color: "#ddbe00"
+#    - name: bedroom_on
+#      background_color: "#ddbe00"
+#      label:
+#        text: "Bedroom On"
+#        color: "#000000"
+#      icon:
+#        icon: bed-empty
+#        color: "#000000"
     - name: full_off
       background_color: "#000000"
       label:
@@ -142,22 +142,22 @@ ios:
       icon:
         icon: lightbulb-on-outline
         color: "#000000"
-    - name: living_room_off
-      background_color: "#000000"
-      label:
-        text: "Living Room Off"
-        color: "#00bb84"
-      icon:
-        icon: lamps-outline
-        color: "#00bb84"
-    - name: living_room_on
-      background_color: "#00bb84"
-      label:
-        text: "Living Room On"
-        color: "#000000"
-      icon:
-        icon: lamps
-        color: "#000000"
+#    - name: living_room_off
+#      background_color: "#000000"
+#      label:
+#        text: "Living Room Off"
+#        color: "#00bb84"
+#      icon:
+#        icon: lamps-outline
+#        color: "#00bb84"
+#    - name: living_room_on
+#      background_color: "#00bb84"
+#      label:
+#        text: "Living Room On"
+#        color: "#000000"
+#      icon:
+#        icon: lamps
+#        color: "#000000"
     - name: dining
       background_color: "#00bb11"
       label:
@@ -193,7 +193,7 @@ ios:
     - name: brightness_up
       background_color: "#ffffaa"
       label:
-        text: "Brightness Up"
+        text: "Brighten"
         color: "#000000"
       icon:
         icon: lightbulb-on
@@ -201,7 +201,7 @@ ios:
     - name: brightness_down
       background_color: "#cccc44"
       label:
-        text: "Brightness Down"
+        text: "Dim"
         color: "#000000"
       icon:
         icon: lightbulb
@@ -209,7 +209,7 @@ ios:
     - name: volume_up
       background_color: "#ccccff"
       label:
-        text: "Volume Up"
+        text: "Louder"
         color: "#000000"
       icon:
         icon: volume-medium
@@ -217,7 +217,7 @@ ios:
     - name: volume_down
       background_color: "#777799"
       label:
-        text: "Volume Down"
+        text: "Softer"
         color: "#000000"
       icon:
         icon: volume-low
