--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -6,7 +6,10 @@
     entity_id: person.sanjit
     zone: zone.home
     event: leave
-  condition: []
+  condition:
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
   action:
   - scene: scene.full_off
   - service: media_player.turn_off
@@ -40,8 +43,14 @@
     - condition: state
       entity_id: weather.philadelphia
       state: cloudy,fog,hail,lightning,lightning-rainy,pouring,rainy,snowy,snowy-rainy
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
   action:
-  - scene: scene.full_on
+  - service: scene.turn_on
+    target:
+      entity_id: scene.living_room_on
+    metadata: {}
   mode: single
 - id: '1610995829321'
   alias: Lights at Sunset
@@ -106,6 +115,9 @@
   - condition: state
     entity_id: person.sanjit
     state: home
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
   action:
   - service: scene.turn_on
     target:
@@ -135,6 +147,9 @@
   - condition: state
     entity_id: input_boolean.auto_vacuum
     state: 'on'
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
   action:
   - service: vacuum.send_command
     data:
@@ -197,6 +212,9 @@
   - condition: state
     entity_id: input_boolean.auto_vacuum
     state: 'on'
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
   action:
   - service: vacuum.send_command
     data:
@@ -327,7 +345,11 @@
 - id: '1694382443921'
   alias: Sonos I - Living Room
   description: ''
-  trigger: []
+  trigger:
+  - platform: event
+    event_type: ios.action_fired
+    event_data:
+      actionName: play_in_living_room
   condition:
   - condition: or
     conditions:
@@ -381,7 +403,11 @@
 - id: '1694384173969'
   alias: Sonos II - Bedroom
   description: ''
-  trigger: []
+  trigger:
+  - platform: event
+    event_type: ios.action_fired
+    event_data:
+      actionName: play_in_bedroom
   condition:
   - condition: or
     conditions:
@@ -423,7 +449,7 @@
     - delay:
         hours: 0
         minutes: 0
-        seconds: 2
+        seconds: 4
         milliseconds: 0
     - service: media_player.unjoin
       data: {}
@@ -435,7 +461,11 @@
 - id: '1694384233538'
   alias: Sonos III - Bathroom
   description: ''
-  trigger: []
+  trigger:
+  - platform: event
+    event_type: ios.action_fired
+    event_data:
+      actionName: play_in_bathroom
   condition:
   - condition: or
     conditions:
@@ -446,7 +476,7 @@
       entity_id: media_player.bedroom
       state: playing
   action:
-    if:
+  - if:
     - condition: or
       conditions:
       - condition: state
@@ -489,7 +519,11 @@
 - id: '1706139995064'
   alias: Sonos IV - Turntable
   description: ''
-  trigger: []
+  trigger:
+  - platform: event
+    event_type: ios.action_fired
+    event_data:
+      actionName: play_turntable
   condition: []
   action:
   - service: media_player.play_media
@@ -497,5 +531,5 @@
       media_content_id: x-rincon-mp3radio://http://192.168.1.20:8000/stream.mp3
       media_content_type: music
     target:
-      entity_id: media_player.bedroom
+      entity_id: media_player.living_room
   mode: single
